@@ -43,6 +43,10 @@ public:
 
 	// This method can be safely called only from Scene::DefineMesh()
 	void DefineExtMesh(luxrays::ExtMesh *mesh);
+	void SetMeshVertexAOV(const std::string &meshName,
+		const unsigned int index, float *data);
+	void SetMeshTriangleAOV(const std::string &meshName,
+		const unsigned int index, float *data);
 
 	bool IsExtMeshDefined(const std::string &meshName) const;
 
