@@ -12,6 +12,7 @@
 * Removed the support for Triplanar texture .uvindex (side effect of the above new feature)
 * New hitpointvertexaov nad hitpointtriangleaov textures
 * Pointiness shape can now assign curvature values to vertex AOV with .aovindex property (a 4294967296 value will force the use of alpha channel instead, defualt value for compatibility with the past)
+* LuxCore API has now SetMeshVertexAOV() and SetMeshTriangleAOV() methods to set geometry vertex and triangle AOV
 
 ### Fixed Bugs
 
